# amazon-apis-rs

./: Cargo.toml
amazon-rekognition/: Cargo.toml  README.md
amazon-rekognition/demo/: Cargo.toml
amazon-rekognition/demo/src/: detect_labels.rs
amazon-rekognition/src/: lib.rs  service_endpoint.rs
amazon-rekognition/src/api/: action_category.rs  mod.rs  utils.rs
amazon-rekognition/src/api/actions/: action.rs  common.rs  detect_labels.rs  mod.rs
amazon-rekognition/src/api/data_types/: bounding_box.rs  image.rs  instance.rs  label.rs  mod.rs  parent.rs  s3_object.rs
amazon-rekognition/tests/response_body_json_files/: detect_labels_err.json  detect_labels_ok.json
amazon-sigv4-kit/: Cargo.toml  README.md
amazon-sigv4-kit/src/: lib.rs
