[package]
name = "amazon-sigv4-kit"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "Amazon Signature Version 4 Kit"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/amazon-apis-rs"
homepage = "https://github.com/bk-rs/amazon-apis-rs"
documentation = "https://docs.rs/amazon-sigv4-kit"
keywords = []
categories = []
readme = "README.md"

[dependencies]
aws-sigv4 = { version = "0.2", default-features = false, features = ["sign-http"]}
http = { version = "0.2", default-features = false }
